@@ -1,4 +1,5 @@
 0.50:
+ * Right mouse button rotation now pivots around the camera.
  * Added --no-time-travel option (Lars Schmertmann).
  * Added --dir-name-position option (Lars Schmertmann).
  * Added --file-extension-fallback option (Lars Schmertmann).
